--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,7 @@
         <li><a href="#cobrand-header">Cobrand Header</a></li>
         <li><a href="#cart">Cart</a></li>
         <li><a href="#breadcrumbs">Breadcrumbs</a></li>
+        <li><a href="#price-slider">Price Slider</a></li>
         <li><a href="#ism-tooltip">ISM Tooltips</a></li>
         <li><a href="#expando">Expando</a></li>
         <li><a href="#icons">Icons</a></li>
@@ -2264,6 +2265,31 @@
           </ol>
         </div>
       </section>
+      
+      <section id="price-slider" class="sg__section">
+          <h2 class="sg__hdg">PRICE SLIDER</h2>
+          <p>The price slider pattern is</p>
+          
+          <div class="sg_price-slider">
+            <div class="filter-bar__subsection filter-bar__subsection--full filter-bar__price filter-bar__price--full">
+                <div class="filter-bar__subsection-label filter-bar__subsection-label-price">Price</div>
+                <div class="price-slider">
+                  <div class="price-slider_min-lable" data-bdd="exposed-mobile-filter-price-slider-min">$999</div>
+                    <div class="price-slider__slider" data-bdd="filter-price-slider">
+                      <div class="slider__wrapper">
+                        <div class="slider" data-bdd="map-price-slider" role="slider" aria-label="Price" aria-valuemax="69.5" aria-valuemin="55.5" aria-valuenow="56" aria-valuetext="56 to 70">
+                          <div class="slider__range"></div>
+                          <div class="slider__range--active" style="width: 100%; left: 3.57143%;"></div>
+                          <div id="min-handle" data-bdd="slider-handle-min" class="slider__handle" style="left: 3.57143%;" tabindex="0"></div>
+                          <div id="max-handle" data-bdd="slider-handle-max" class="slider__handle" style="left: 103.571%;" tabindex="0"></div>
+                        </div>
+                      </div>
+                    </div>
+                 <div class="price-slider_max-lable" data-bdd="exposed-mobile-filter-price-slider-max">$9999</div>
+              </div>
+            </div>
+          </div>
+      </section>  
 
       <section id="ism-tooltip" class="sg__section">
         <h3 class="sg__hdg">ISM Tooltips</h3>
